--- a/JOTWEB/OIL/css/M00001.css
+++ b/JOTWEB/OIL/css/M00001.css
@@ -535,6 +535,19 @@ div.showGuidance a[id^="Menu_"] {
 /* ******************** */
 /* 月間輸送量ペイン個別 */
 /* ******************** */
+/* 切り口選択エリア */
+#P002_contentPane .divDdlArea {
+    display:flex;
+    align-items:center;
+}
+#P002_contentPane .divDdlArea .officeDdl {
+    margin-left:5px;
+    margin-right:5px;
+}
+#P002_contentPane .measureText {
+    margin-left:auto;
+    margin-right:10px;
+}
 /* 表とグラフを横並び */
 .monthTransLeft, .monthTransRight {
     display: inline-block;
@@ -571,8 +584,10 @@ div.showGuidance a[id^="Menu_"] {
     background-color: transparent;
 }
 .monthTransTable table th.trainClass {
-    width:95px;
-    min-width:95px;
+    width: 50px;
+    min-width: 50px;
+    white-space: normal;
+    word-break: break-all;
 }
 /* 油種セル幅 */
 .monthTransTable table th.oilType {
@@ -601,17 +616,22 @@ div.showGuidance a[id^="Menu_"] {
     width: 80px;
     min-width:80px;
 }
-/* その他数値セル幅 */
+/* 数値(kl表示部)セル幅 */
 .monthTransTable table th.yesterday,
 .monthTransTable table th.today,
 .monthTransTable table th.todayTrans,
 .monthTransTable table th.volumeChange,
+.monthTransTable table th.lyVolumeChange {
+    width: 125px;
+    min-width: 125px;
+    max-width: 125px;
+}
+/* 数値(率表示部)セル幅 */
 .monthTransTable table th.volumeRatio,
-.monthTransTable table th.lyVolumeChange,
 .monthTransTable table th.lyVolumeRatio {
-    width: 110px;
-    min-width: 110px;
-    max-width: 110px;
+    width: 95px;
+    min-width: 95px;
+    max-width: 95px;
 }
 /* 列見出し（油種名）*/
 .monthTransTable .oilNameData {
@@ -619,7 +639,7 @@ div.showGuidance a[id^="Menu_"] {
 }
 /* 列データ */
 .monthTransTable td {
-    text-align:right;
+    text-align: right;
 }
 .monthTransTable td.center {
     text-align: center;
@@ -639,6 +659,10 @@ div.showGuidance a[id^="Menu_"] {
 .monthTransTable.view005 td.oilCode.midSummary span {
     font-weight: bold;
 }
+.monthTransTable table td.trainClass {
+    white-space: normal;
+    word-break: break-all;
+}
 /* 合計行のセル */
 .monthTransTable td.summary {
    background-color:palegoldenrod;
@@ -657,6 +681,7 @@ div.showGuidance a[id^="Menu_"] {
     background-color: darkorange;
     color: white;
 }
+
 /* ******************************** */
 /* 貨車連結順序表取込状況ペイン個別 */
 /* ******************************** */
