--- a/JOTWEB/OIL/css/M00001.css
+++ b/JOTWEB/OIL/css/M00001.css
@@ -681,7 +681,12 @@ div.showGuidance a[id^="Menu_"] {
     background-color: darkorange;
     color: white;
 }
-
+#P002_contentPane .btnDownload {
+    margin-left: 10px;
+    height: 28px;
+    padding-top: 0px;
+    box-sizing:border-box;
+}
 /* ******************************** */
 /* 貨車連結順序表取込状況ペイン個別 */
 /* ******************************** */
