受注関連の社外連携関連文言変更、ボタン追加（ロジック無し）

--- a/JOTWEB/OIL/css/OIT0003OTL.css
+++ b/JOTWEB/OIL/css/OIT0003OTL.css
@@ -1,4 +1,10 @@
-﻿/* 左ヘッダー行スタイル */
+﻿#WF_ButtonOtSend,
+#WF_ButtonReserved,
+#WF_ButtonTakusou {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+/* 左ヘッダー行スタイル */
 div[data-generated="1"] div[id$="_HL"] table tr {
     height: 37px;
 }
