--- a/JOTWEB/OIL/css/OIT0007L.css
+++ b/JOTWEB/OIL/css/OIT0007L.css
@@ -110,3 +110,95 @@ a.ef {
 #fupAttachment {
     display: none;
 }
+
+/* ********************** */
+/* 更新確認ボックス関連   */
+/* ********************** */
+/* 初期は非表示 */
+#divUpdList {
+    display:none;
+    pointer-events:none;
+}
+/* 初期は非表示 */
+#divUpdList.showUpdConfirm {
+    padding:5px;
+    display:block;
+    position:absolute;
+    top:0;
+    background-color:white;
+    width:100%;
+    height:100%;
+    z-index:10;
+    pointer-events:auto;
+}
+#divUpdList .actionButtonBox {
+    width:100vw;
+}
+#divUpdList #divInputResultWrapper {
+    width:calc(100% - 5px);
+    height:calc(100% - 35px);
+    overflow:auto;
+}
+#divUpdList .updateList {
+    //height: calc(100% - 20px);
+    margin-bottom:20px;
+    min-height:410px;
+}
+#btnCloseThisConfirm {
+    margin-right: 10px;
+}
+.tblUpdList {
+    border-collapse :collapse;
+    table-layout:fixed;
+} 
+.tblUpdList th,
+.tblUpdList td {
+    padding: 5px;
+    vertical-align :middle;
+    border:1px solid gray;
+}
+.tblUpdList td { 
+    vertical-align :top;
+}
+.tblUpdList td.updChk {
+    text-align:center;
+    vertical-align :middle;
+} 
+.tblUpdList th.updChk {
+    width:32px;
+}
+.tblUpdList th.reservedNo {
+    width:100px;
+}
+.tblUpdList th.trnNo {
+    width:90px;
+}
+.tblUpdList th.oilName {
+    width:80px;
+}
+.tblUpdList th.amount {
+    width:50px;
+}
+.tblUpdList th.reason {
+    width:150px;
+}
+.tblUpdList th.dbReservedNo {
+    width:65px;
+}
+.tblUpdList th.trainNo {
+    width:65px;
+}
+.tblUpdList th.lodDate,
+.tblUpdList th.depDate{
+    width:90px;
+}
+
+.tblUpdList th {
+    background-color:rgb(189,215,238);
+}
+.tblUpdList th.db {
+    background-color:rgb(248,203,173);
+}
+.tblUpdList td.amount {
+    text-align:right;
+}
