--- a/JOTWEB/css/common.css
+++ b/JOTWEB/css/common.css
@@ -350,9 +350,33 @@ div[data-generated='1'] input[type=password] {
     opacity: 0.8;
     filter: alpha(opacity=8);
 }
+/* 削除アイコン */
+.delIconArea {
+    position: absolute;
+    display: table-cell;
+    top: 0;
+    right: 0;
+    padding-right: 5px;
+    width: 16px;
+    height: 100%;
+    vertical-align: middle;
+    z-index: 2;
+}
+.delIconArea div {
+    width: 16px;
+    height: 16px;
+    margin-top: calc(100% - 8px); /* 全体の高さ - (画像の高さ ÷ 2) */
+    font-size: 16px;
+    color: red;
+    cursor:pointer;
+}
+.delIconArea div:after {
+    content: "×";
+}
 /* グリッド内の補正 */
 div[data-generated='1'] .boxIconArea div,
-div[data-generated='1'] .richTextIconArea div {
+div[data-generated='1'] .richTextIconArea div,
+div[data-generated='1'] .delIconArea div {
     margin-top: calc(100% - 12px);
 }
 /* Chromeのみアイコンがテキストボックスの中央に行かないので補正 */
