--- a/JOTWEB/css/common.css
+++ b/JOTWEB/css/common.css
@@ -1582,6 +1582,26 @@ div[data-generated="1"] tr.hasOrderInfoValue.warnInfo.hover td,
 div[data-generated="1"] tr.hasOrderInfoValue.warnInfo.hover th {
     background-color: #a3a4ff !important;
 }
+/* ------------------------------
+回送情報有の場合の設定
+------------------------------ */
+div[data-generated="1"] tr.hasKaisouInfoValue td,
+div[data-generated="1"] tr.hasKaisouInfoValue th {
+    background-color: indianred;
+}
+div[data-generated="1"] tr.hasKaisouInfoValue.hover td,
+div[data-generated="1"] tr.hasKaisouInfoValue.hover th {
+    background-color: #32a3a3 !important;
+}
+div[data-generated="1"] tr.hasKaisouInfoValue.warnInfo td,
+div[data-generated="1"] tr.hasKaisouInfoValue.warnInfo th {
+    background-color:#ffffa3
+}
+div[data-generated="1"] tr.hasKaisouInfoValue.warnInfo.hover td,
+div[data-generated="1"] tr.hasKaisouInfoValue.warnInfo.hover th {
+    background-color: #a3a4ff !important;
+}
+
 /* ************************ */
 /* タブ下部の入力エリア     */
 /* ************************ */
