・社外連携ボタンの取込一覧のボタン文言変更 ・帳票ポップアップの「キャンセル」ボタン文言変更 【完】 No.303：Eneos帳票の軽油・３号の期間考慮（合計に含めない） No.354:Eneos帳票選択時の初期日付を当日 【一部完】 No.330:一部なのでCloseはしないでください 　　　　受注作成ボタンの色、油種の色 　　　　※合計欄は未着手

--- a/JOTWEB/OIL/OILMasterPage.Master
+++ b/JOTWEB/OIL/OILMasterPage.Master
@@ -58,7 +58,7 @@
                         <div class="popUpTitle"><asp:ContentPlaceHolder ID="contentsPopUpTitle" runat="server"></asp:ContentPlaceHolder></div>
                         <div class="popUpButtons">
                             <input type="button" id="WF_ButtonOkCommonPopUp"     class="btn-sticky" value="OK"  onclick="ButtonClick('WF_ButtonOkCommonPopUp');" />
-                            <input type="button" id="WF_ButtonCancelCommonPopUp" class="btn-sticky" value="ｷｬﾝｾﾙ" onclick="commonHideCustomPopup();" />
+                            <input type="button" id="WF_ButtonCancelCommonPopUp" class="btn-sticky" value="閉じる" onclick="commonHideCustomPopup();" />
                         </div>
                         <div class="popUpContents">
                             <asp:ContentPlaceHolder ID="contentsPopUpInside" runat="server"></asp:ContentPlaceHolder>
