①ユーザIDマスタメンテ ・一覧から登録・更新画面への遷移で、レコードの会社コードが01以外だと遷移できないバグを修正 ・登録・更新画面にて、会社コードが01以外だと入力内容チェック処理が正常に処理されないバグを修正
②費用管理
・画面レイアウト調整（行追加時した場合に縦スクロールバーが表示されない等）

--- a/JOTWEB/OIL/css/OIT0008M.css
+++ b/JOTWEB/OIL/css/OIT0008M.css
@@ -37,6 +37,15 @@
     min-height: 1.0em;
 }
 
+div.headerbox, div.detailbox {
+    min-width: 1220px;
+}
+
+div.detailbox {
+    height: calc(100% - 40px);
+    overflow-y: scroll;
+}
+
 div.detail_keijoym {
     width: 100%;
     box-sizing: border-box;
@@ -89,7 +98,7 @@ div.detail_costlist {
     margin-bottom: 8px;
     margin-left: 20px;
     font-size: 0.9em;
-    overflow-x:scroll;
+    overflow-x: scroll;
 }
 
 table#WF_COSTLISTTBL, table#WF_COSTLISTTBL th, table#WF_COSTLISTTBL td {
