・甲子のENEOS文言の□を全角スペース、および下記積込指示書のソートに合わせたソート、 ・四日市の出荷予約ファイルの数量を積込予約マスタより取得

--- a/JOTWEB/OIL/css/OIT0004C.css
+++ b/JOTWEB/OIL/css/OIT0004C.css
@@ -833,7 +833,7 @@ div.popUpContents > div {
     margin-top:calc(100% - 14px) !important;
 }
 /* 変更された情報を押えるテキストボックススタイル */
-input[type=text].modified {
+input[type=text].modified:not(:disabled) {
     background-color:blue;
     color:white;
 }
