--- a/JOTWEB/OIL/css/OIT0004S.css
+++ b/JOTWEB/OIL/css/OIT0004S.css
@@ -1,2 +1,41 @@
-﻿body {
+﻿.tblLastupdate {
+    border-collapse: separate;
+    table-layout: fixed;
+    width: 300px;
+    box-sizing: border-box;
+    border: 1px solid darkgray;
+    border-radius: 5px;
+    border-spacing:1px;
+}
+.tblLastupdate td, .tblLastupdate th {
+    border: 1px solid darkgray;
+    padding:5px;
+    border-radius:5px;
+}
+.tblLastupdate th.userName {
+    width:150px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border-top-right-radius: 0px;
+}
+.tblLastupdate th.update {
+    width:150px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border-top-left-radius: 0px;
+} 
+.tblLastupdate th {
+    font-size:14px;
+    background-color:dodgerblue;
+    color:white;
+}
+.tblLastupdate td:first-child  {
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
+.tblLastupdate td:last-child  {
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-left-radius: 0px;
 }
