--- a/JOTWEB/OIL/css/OIT0004C.css
+++ b/JOTWEB/OIL/css/OIT0004C.css
@@ -911,3 +911,9 @@ input[type=text].modified:not(:disabled) {
     background-color:blue;
     color:white;
 }
+/* リリース前なので隠す */
+#chkPrintConsigneeRep, #chkConsigneeRepDoubleSpan, #chkPrintConsigneeRep + label, #chkConsigneeRepDoubleSpan + label{
+    display: none !important;
+    width: 0;
+    height: 0;
+}
