No.365油槽所在庫管理帳票作成コミット

--- a/JOTWEB/OIL/css/OIT0004C.css
+++ b/JOTWEB/OIL/css/OIT0004C.css
@@ -913,7 +913,7 @@ input[type=text].modified:not(:disabled) {
 }
 /* リリース前なので隠す */
 #chkPrintConsigneeRep, #chkConsigneeRepDoubleSpan, #chkPrintConsigneeRep + label, #chkConsigneeRepDoubleSpan + label{
-    display: none !important;
+    /*display: none !important;
     width: 0;
-    height: 0;
+    height: 0;*/
 }
