【帳票画面微修正】 １．当日チェックボックス（ボタン）を追加 ２．当日チェックONで当日を表示 ３．当日チェックOFFで翌日を表示 ４．袖ヶ浦の連結順序表選択時、列車番号の初期値を5461に修正。

--- a/JOTWEB/OIL/css/OIT0003L.css
+++ b/JOTWEB/OIL/css/OIT0003L.css
@@ -57,3 +57,6 @@ div[data-generated="1"] td:nth-child(4) {
 #divContentsPopUp .grc0001Wrapper ul {
     width:600px; /* 共通は450px で３列折り返しから４列折り返しに */
 }
+.grc0001Wrapper input[type=checkbox] + label {
+    display: inline-flex;
+}
