〇費用管理画面 ・「輸送費明細」ボタン追加（輸送費明細EXCELを出力）

--- a/JOTWEB/OIL/css/OIT0008M.css
+++ b/JOTWEB/OIL/css/OIT0008M.css
@@ -33,6 +33,10 @@
     border-right: solid 1px #2bb6c1;
 }
 
+input#WF_DL_TRASPORTCOSTSDETAIL {
+    margin-left: 20px;
+}
+
 .memo_text {
     min-height: 1.0em;
 }
